WIP: For fixing page landing on Firefox.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1570,7 +1570,7 @@ html {
 }
 
 html, body {
-    height: 100%;
+    height: 0%;
 }
 
 body {
